test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/nonnullableany.widl
interface NonNullable {
  attribute any? foo;
};